# statemachine

./: .gitignore  CMakeLists.txt  build_and_run_tests.sh  local_build.sh
src/: CMakeLists.txt  StateMachine.cpp  StateMachine.hpp  main.cpp
tst/: CMakeLists.txt  test_stateMachine.cpp
